# nom-midi-rs

./: CHANGELOG.md  Cargo.toml  README.md
examples/: simple.rs  test.mid
src/: lib.rs  note.rs  types.rs
src/parser/: header.rs  mod.rs  track.rs  util.rs
src/parser/event/: meta.rs  midi.rs  mod.rs  sysex.rs
src/types/: note.rs
