[package]
name = "nom-midi"
description = "Parse a simple midi file into data structures using nom"
version = "0.5.1"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
license = "Apache-2.0/MIT"
documentation = "https://docs.rs/nom-midi"
homepage = "https://github.com/derekdreery/nom-midi-rs"
repository = "https://github.com/derekdreery/nom-midi-rs"
edition = "2018"

[features]
default = []
# This is for continuation events (e.g. used by Casio). Currently unimplemented
continuation_sysex = []

[dependencies]
nom = "5.0"
